--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -103,6 +103,7 @@ a, a:hover, a:visited, a:active, a:link
 	-webkit-text-shadow: rgba(0,0,0,.01) 0 0 1px;
 	text-shadow: rgba(0,0,0,.01) 0 0 1px;
 }
+.color{color: white;}
 p a:active
 {
 	position: relative;
@@ -827,6 +828,7 @@ section
 	background-size: cover;
 	background-position: center center;
 	margin-top: 150px;
+
 }
 .main_slider_content
 {
@@ -834,12 +836,14 @@ section
 }
 .main_slider_content h6
 {
+	color: white;
 	font-weight: 500;
 	text-transform: uppercase;
 	margin-bottom: 29px;
 }
-.main_slider_content h1
+.main_slider_content h3
 {
+	color: white;
 	font-weight: 400;
 	line-height: 1;
 }
